general code cleanups